<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright (c) 2021, RTE (http://www.rte-france.com)
  ~ This Source Code Form is subject to the terms of the Mozilla Public
  ~ License, v. 2.0. If a copy of the MPL was not distributed with this
  ~ file, You can obtain one at http://mozilla.org/MPL/2.0/.
  ~
  -->
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>powsybl-parent</artifactId>
        <groupId>com.powsybl</groupId>
        <version>3</version>
        <relativePath/>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>powsybl-metrix</artifactId>
    <packaging>pom</packaging>
    <version>1.0.0-SNAPSHOT</version>

    <name>powsybl metrix</name>
    <description>Multisituation loadflow and optimization module for powsybl</description>
    <url>https://www.powsybl.org</url>

    <scm>
        <connection>scm:git:https://github.com/powsybl/powsybl-metrix.git</connection>
        <developerConnection>scm:git:https://github.com/powsybl/powsybl-metrix.git</developerConnection>
        <url>https://github.com/powsybl/powsybl-metrix</url>
    </scm>

    <modules>
        <module>metrix-distribution</module>
        <module>metrix-integration</module>
        <module>metrix-mapping</module>
        <module>metrix-tools</module>
    </modules>

    <developers>
        <developer>
            <name>Geoffroy JAMGOTCHIAN</name>
            <email>geoffroy.jamgotchian@rte-france.com</email>
            <organization>RTE</organization>
            <organizationUrl>http://www.rte-france.com</organizationUrl>
        </developer>
        <developer>
            <name>Paul BUI-QUANG</name>
            <email>paul.buiquang@rte-france.com</email>
            <organization>RTE</organization>
            <organizationUrl>http://www.rte-france.com</organizationUrl>
        </developer>
    </developers>

    <properties>
        <java.version>11</java.version>

        <assertj.version>3.11.0</assertj.version>
        <autoservice.version>1.0-rc2</autoservice.version>
        <commonscli.version>1.3.1</commonscli.version>
        <groovy.version>3.0.7</groovy.version>
        <guava.version>29.0-jre</guava.version>
        <jimfs.version>1.1</jimfs.version>
        <junit.version>4.13.1</junit.version>
        <log4joslf4j.version>1.7.30</log4joslf4j.version>
        <logback.version>1.1.8</logback.version>
        <mockito.version>3.3.3</mockito.version>
        <slf4j.version>1.7.22</slf4j.version>

        <powsyblcore.version>4.2.0</powsyblcore.version>
    </properties>

    <profiles>
        <profile>
            <id>release</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>javadoc-aggregate-jar</id>
                                <phase>package</phase>
                                <inherited>false</inherited>
                                <goals>
                                    <goal>aggregate-jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>commons-cli</groupId>
                <artifactId>commons-cli</artifactId>
                <version>${commonscli.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.auto.service</groupId>
                <artifactId>auto-service</artifactId>
                <version>${autoservice.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${guava.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.jimfs</groupId>
                <artifactId>jimfs</artifactId>
                <version>${jimfs.version}</version>
            </dependency>
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-commons</artifactId>
                <type>test-jar</type>
                <version>${powsyblcore.version}</version>
            </dependency>
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-computation-local</artifactId>
                <version>${powsyblcore.version}</version>
            </dependency>
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-config-classic</artifactId>
                <version>${powsyblcore.version}</version>
            </dependency>
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-config-test</artifactId>
                <version>${powsyblcore.version}</version>
            </dependency>
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-contingency-api</artifactId>
                <version>${powsyblcore.version}</version>
            </dependency>
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-contingency-dsl</artifactId>
                <version>${powsyblcore.version}</version>
            </dependency>
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-iidm-api</artifactId>
                <version>${powsyblcore.version}</version>
            </dependency>
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-iidm-converter-api</artifactId>
                <version>${powsyblcore.version}</version>
            </dependency>
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-iidm-extensions</artifactId>
                <version>${powsyblcore.version}</version>
            </dependency>
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-iidm-impl</artifactId>
                <version>${powsyblcore.version}</version>
            </dependency>
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-iidm-scripting</artifactId>
                <version>${powsyblcore.version}</version>
            </dependency>
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-iidm-xml-converter</artifactId>
                <version>${powsyblcore.version}</version>
            </dependency>
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-time-series-api</artifactId>
                <version>${powsyblcore.version}</version>
            </dependency>
            <dependency>
                <groupId>com.powsybl</groupId>
                <artifactId>powsybl-tools</artifactId>
                <version>${powsyblcore.version}</version>
            </dependency>
            <dependency>
                <groupId>org.assertj</groupId>
                <artifactId>assertj-core</artifactId>
                <version>${assertj.version}</version>
            </dependency>
            <dependency>
                <groupId>org.codehaus.groovy</groupId>
                <artifactId>groovy</artifactId>
                <version>${groovy.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>${mockito.version}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-simple</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${junit.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>
